--- a/lec - 1/index.html
+++ b/lec - 1/index.html
@@ -5,10 +5,10 @@
 
     </head>
     <body>
-        <h1>H1: HTML Masterclass</h1>
+        <h1>H1: HTML Master</h1>
         <h2>H2: FATHIMA</h2>
         <h3>H3: MIFSHA</h3>
-        <h4>H4: AGE 22</h4>
+        <h4>H4: 22</h4>
         <h5>H5: UNIVERSITY OF JAFFNA</h5>
         <h6>H6: DEPARTMENT OF IT</h6>
         <p>It's a sample paragraph content</p>
